--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <section id="about" class="section" data-aos="fade-up">
   <div class="card">
     <h2>من أنا؟</h2>
-    <p>أنا يونس، أو كما يعرفني البعض بـ FURY. محرر فيديو محترف أشتغل ببرنامج Adobe Premiere Pro منذ أكثر من عامين، أتمتع بذوق بصري عالي، وسرعة في المونتاج، وإبداع في تحويل أي فكرة بسيطة إلى فيديو احترافي يلفت الأنظار. أتمنى أن أكون ضمن فريقك القادم!
+    <p>أنا يونس. محرر فيديو محترف أشتغل ببرنامج Adobe Premiere Pro منذ أكثر من عامين، أتمتع بذوق بصري عالي، وسرعة في المونتاج، وإبداع في تحويل أي فكرة بسيطة إلى فيديو احترافي يلفت الأنظار. أتمنى أن أكون ضمن فريقك القادم!
 
     </p>
   </div>
@@ -119,7 +119,6 @@
       <li>Adobe Premiere Pro (احترافي)      </li>
       <li>Adobe Photoshop (جيد جداً)     </li>
       <li>تعديل الألوان، المونتاج الإيقاعي، المؤثرات البصرية البسيطة      </li>
-      <li>العمل تحت الضغط والتسليم في الوقت المحدد      </li>
     </ul>
   </div>
 </section>
